--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 fastapi==0.109.0
 uvicorn==0.27.0
+gunicorn==21.2.0
 pandas==2.1.4
 scikit-learn==1.3.2
 numpy==1.26.3
 pydantic==2.5.3
+python-dotenv==1.0.0
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.23.0
+httpx==0.25.2
