--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn==0.27.0
 gunicorn==21.2.0
 pandas==2.2.0
 scikit-learn==1.4.0
+scipy==1.11.4
 numpy==1.26.3
 pydantic==2.5.3
 python-dotenv==1.0.0
